Create a new user if users table empty on UI login
